crates/toml/tests/snapshots/invalid/key/two-equals-01.stderr
TOML parse error at line 1, column 6
  |
1 | key= = 1
  |      ^
extra `=`, expected nothing

---
TOML parse error at line 1, column 8
  |
1 | key= = 1
  |        ^
unexpected key or value, expected newline, `#`
